# instruction_following_eval

./: README.md  pyproject.toml
instruction_following_eval/: __init__.py  evaluation.py  evaluation_main.py  instructions.py  instructions_registry.py  instructions_util.py  main.py
