[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instruction_following_eval"
version = "0.1.0"
description = "Instruction Following Eval"
authors = [{ name = "Jose Javier Gonzalez Ortiz"}]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["instruction_following_eval", "formats", "machine learning", "encoding"]
dependencies = [
    "immutabledict",
    "langdetect",
    "nltk",
    "pandas",
    "typer",
]

# [project.optional-dependencies]
# dev = ["absl-py"]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/josejg/instruction_following_eval"
Repository = "https://github.com/josejg/instruction_following_eval"


[tool.setuptools.package-data]
instruction_following_eval = ["data/*"]


# [project.scripts]
# realpython = "reader.__main__:main"

